src/be/ccfun/day19/gen/Day19Parser.java
package be.ccfun.day19.gen;// Generated from /Users/nelec/ccfun/AOC_2020/resources/Day19.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Day19Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2;
	public static final int
		RULE_var136 = 0, RULE_var120 = 1, RULE_var26 = 2, RULE_var42 = 3, RULE_var103 = 4, 
		RULE_var35 = 5, RULE_var82 = 6, RULE_var96 = 7, RULE_var25 = 8, RULE_var4 = 9, 
		RULE_var90 = 10, RULE_var63 = 11, RULE_var71 = 12, RULE_var61 = 13, RULE_var2 = 14, 
		RULE_var12 = 15, RULE_var86 = 16, RULE_var100 = 17, RULE_var91 = 18, RULE_var117 = 19, 
		RULE_var22 = 20, RULE_var130 = 21, RULE_var58 = 22, RULE_var97 = 23, RULE_var45 = 24, 
		RULE_var76 = 25, RULE_var10 = 26, RULE_var124 = 27, RULE_var116 = 28, 
		RULE_var47 = 29, RULE_var110 = 30, RULE_var43 = 31, RULE_var126 = 32, 
		RULE_var134 = 33, RULE_var132 = 34, RULE_var49 = 35, RULE_var107 = 36, 
		RULE_var108 = 37, RULE_var34 = 38, RULE_var53 = 39, RULE_var33 = 40, RULE_var31 = 41, 
		RULE_var9 = 42, RULE_var113 = 43, RULE_var50 = 44, RULE_var122 = 45, RULE_var66 = 46, 
		RULE_var87 = 47, RULE_var106 = 48, RULE_var65 = 49, RULE_var32 = 50, RULE_var84 = 51, 
		RULE_var3 = 52, RULE_var8 = 53, RULE_var62 = 54, RULE_var55 = 55, RULE_var1 = 56, 
		RULE_var60 = 57, RULE_var133 = 58, RULE_var123 = 59, RULE_var121 = 60, 
		RULE_var38 = 61, RULE_var36 = 62, RULE_var135 = 63, RULE_var70 = 64, RULE_var41 = 65, 
		RULE_var119 = 66, RULE_var83 = 67, RULE_var11 = 68, RULE_var101 = 69, 
		RULE_var28 = 70, RULE_var98 = 71, RULE_var93 = 72, RULE_var72 = 73, RULE_var69 = 74, 
		RULE_var20 = 75, RULE_var57 = 76, RULE_var5 = 77, RULE_var54 = 78, RULE_var37 = 79, 
		RULE_var13 = 80, RULE_var16 = 81, RULE_var81 = 82, RULE_var73 = 83, RULE_var88 = 84, 
		RULE_var92 = 85, RULE_var18 = 86, RULE_var77 = 87, RULE_var56 = 88, RULE_var95 = 89, 
		RULE_var7 = 90, RULE_var59 = 91, RULE_var127 = 92, RULE_var48 = 93, RULE_var52 = 94, 
		RULE_var15 = 95, RULE_var24 = 96, RULE_var102 = 97, RULE_var40 = 98, RULE_var85 = 99, 
		RULE_var109 = 100, RULE_var114 = 101, RULE_var30 = 102, RULE_var67 = 103, 
		RULE_var131 = 104, RULE_var105 = 105, RULE_var111 = 106, RULE_var51 = 107, 
		RULE_var78 = 108, RULE_var104 = 109, RULE_var129 = 110, RULE_var74 = 111, 
		RULE_var89 = 112, RULE_var27 = 113, RULE_var6 = 114, RULE_var99 = 115, 
		RULE_var68 = 116, RULE_r = 117, RULE_var17 = 118, RULE_var39 = 119, RULE_var80 = 120, 
		RULE_var21 = 121, RULE_var29 = 122, RULE_var23 = 123, RULE_var115 = 124, 
		RULE_var46 = 125, RULE_var125 = 126, RULE_var112 = 127, RULE_var128 = 128, 
		RULE_var64 = 129, RULE_var79 = 130, RULE_var118 = 131, RULE_var75 = 132, 
		RULE_var14 = 133, RULE_var19 = 134, RULE_var94 = 135, RULE_var44 = 136;
	private static String[] makeRuleNames() {
		return new String[] {
			"var136", "var120", "var26", "var42", "var103", "var35", "var82", "var96", 
			"var25", "var4", "var90", "var63", "var71", "var61", "var2", "var12", 
			"var86", "var100", "var91", "var117", "var22", "var130", "var58", "var97", 
			"var45", "var76", "var10", "var124", "var116", "var47", "var110", "var43", 
			"var126", "var134", "var132", "var49", "var107", "var108", "var34", "var53", 
			"var33", "var31", "var9", "var113", "var50", "var122", "var66", "var87", 
			"var106", "var65", "var32", "var84", "var3", "var8", "var62", "var55", 
			"var1", "var60", "var133", "var123", "var121", "var38", "var36", "var135", 
			"var70", "var41", "var119", "var83", "var11", "var101", "var28", "var98", 
			"var93", "var72", "var69", "var20", "var57", "var5", "var54", "var37", 
			"var13", "var16", "var81", "var73", "var88", "var92", "var18", "var77", 
			"var56", "var95", "var7", "var59", "var127", "var48", "var52", "var15", 
			"var24", "var102", "var40", "var85", "var109", "var114", "var30", "var67", 
			"var131", "var105", "var111", "var51", "var78", "var104", "var129", "var74", 
			"var89", "var27", "var6", "var99", "var68", "r", "var17", "var39", "var80", 
			"var21", "var29", "var23", "var115", "var46", "var125", "var112", "var128", 
			"var64", "var79", "var118", "var75", "var14", "var19", "var94", "var44"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'a'", "'b'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Day19.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Day19Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Var136Context extends ParserRuleContext {
		public Var83Context var83() {
			return getRuleContext(Var83Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var102Context var102() {
			return getRuleContext(Var102Context.class,0);
		}
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var136Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var136; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar136(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar136(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar136(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var136Context var136() throws RecognitionException {
		Var136Context _localctx = new Var136Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_var136);
		try {
			setState(280);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(274);
				var83();
				setState(275);
				var66();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(277);
				var102();
				setState(278);
				var116();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var120Context extends ParserRuleContext {
		public Var83Context var83() {
			return getRuleContext(Var83Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var58Context var58() {
			return getRuleContext(Var58Context.class,0);
		}
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var120Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var120; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar120(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar120(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar120(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var120Context var120() throws RecognitionException {
		Var120Context _localctx = new Var120Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_var120);
		try {
			setState(288);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(282);
				var83();
				setState(283);
				var66();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(285);
				var58();
				setState(286);
				var116();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var26Context extends ParserRuleContext {
		public Var56Context var56() {
			return getRuleContext(Var56Context.class,0);
		}
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var105Context var105() {
			return getRuleContext(Var105Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var26Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var26; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar26(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar26(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar26(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var26Context var26() throws RecognitionException {
		Var26Context _localctx = new Var26Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_var26);
		try {
			setState(296);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(290);
				var56();
				setState(291);
				var116();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(293);
				var105();
				setState(294);
				var66();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var42Context extends ParserRuleContext {
		public Var37Context var37() {
			return getRuleContext(Var37Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var100Context var100() {
			return getRuleContext(Var100Context.class,0);
		}
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var42Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var42; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar42(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar42(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar42(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var42Context var42() throws RecognitionException {
		Var42Context _localctx = new Var42Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_var42);
		try {
			setState(304);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(298);
				var37();
				setState(299);
				var66();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(301);
				var100();
				setState(302);
				var116();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var103Context extends ParserRuleContext {
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var33Context var33() {
			return getRuleContext(Var33Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var47Context var47() {
			return getRuleContext(Var47Context.class,0);
		}
		public Var103Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var103; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar103(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar103(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar103(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var103Context var103() throws RecognitionException {
		Var103Context _localctx = new Var103Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_var103);
		try {
			setState(312);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(306);
				var116();
				setState(307);
				var33();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(309);
				var66();
				setState(310);
				var47();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var35Context extends ParserRuleContext {
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var21Context var21() {
			return getRuleContext(Var21Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var105Context var105() {
			return getRuleContext(Var105Context.class,0);
		}
		public Var35Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var35; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar35(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar35(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar35(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var35Context var35() throws RecognitionException {
		Var35Context _localctx = new Var35Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_var35);
		try {
			setState(320);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(314);
				var116();
				setState(315);
				var21();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(317);
				var66();
				setState(318);
				var105();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var82Context extends ParserRuleContext {
		public Var113Context var113() {
			return getRuleContext(Var113Context.class,0);
		}
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var93Context var93() {
			return getRuleContext(Var93Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var82Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var82; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar82(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar82(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar82(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var82Context var82() throws RecognitionException {
		Var82Context _localctx = new Var82Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_var82);
		try {
			setState(328);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(322);
				var113();
				setState(323);
				var116();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(325);
				var93();
				setState(326);
				var66();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var96Context extends ParserRuleContext {
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var60Context var60() {
			return getRuleContext(Var60Context.class,0);
		}
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var61Context var61() {
			return getRuleContext(Var61Context.class,0);
		}
		public Var96Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var96; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar96(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar96(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar96(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var96Context var96() throws RecognitionException {
		Var96Context _localctx = new Var96Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_var96);
		try {
			setState(336);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(330);
				var66();
				setState(331);
				var60();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(333);
				var116();
				setState(334);
				var61();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var25Context extends ParserRuleContext {
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var68Context var68() {
			return getRuleContext(Var68Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var34Context var34() {
			return getRuleContext(Var34Context.class,0);
		}
		public Var25Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var25; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar25(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar25(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar25(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var25Context var25() throws RecognitionException {
		Var25Context _localctx = new Var25Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_var25);
		try {
			setState(344);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(338);
				var116();
				setState(339);
				var68();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(341);
				var66();
				setState(342);
				var34();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var4Context extends ParserRuleContext {
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var4Context var4() throws RecognitionException {
		Var4Context _localctx = new Var4Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_var4);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(346);
			var116();
			setState(347);
			var66();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var90Context extends ParserRuleContext {
		public Var66Context var66() {
			return getRuleContext(Var66Context.class,0);
		}
		public Var14Context var14() {
			return getRuleContext(Var14Context.class,0);
		}
		public Var116Context var116() {
			return getRuleContext(Var116Context.class,0);
		}
		public Var91Context var91() {
			return getRuleContext(Var91Context.class,0);
		}
		public Var90Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var90; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).enterVar90(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Day19Listener ) ((Day19Listener)listener).exitVar90(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Day19Visitor ) return ((Day19Visitor<? extends T>)visitor).visitVar90(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var90Context var90() throws RecognitionException {
		Var90Context _localctx = new Var90Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_var90);
		try {
			setState(355);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(349);
				var66();
				setState(350);
				var14();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(352);
				var116();
				setState(353);
				var91();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
